# CampusGuide

./: .gitignore  CMakeLists.txt  functions.cpp  functions.h  labels.cpp  labels.h  main_campus.json  mainwindow.cpp  mainwindow.h  map.cpp  map.h  player.cpp  player.h  route_label.cpp  route_label.h
data/: main_campus.json  main_campus_bus.json  main_campusbus.json  shahe_campus.json  shahe_campus_bus.json  shahe_campusbus.json
src/: deswidget.cpp  deswidget.h  functions.cpp  functions.h  labels.cpp  labels.h  mainwindow.cpp  mainwindow.h  map.cpp  map.h  player.cpp  player.h
